--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
 
 #menu {
     float: right;
-    margin-right: 15%;
+    margin-right: 0%;
     height: 70px;
     background: transparent;
 }
@@ -109,4 +109,28 @@ body {
 #menu ul li a:hover {
     color: #37bcf9;
     transform: scale(1.2, 1.2); /*AUMENTA EL a DEL MENU SIN MODIFICAR NADA */
+}
+
+/* BANNER */
+#banner {
+    width: 95.6%;
+    height: 100px;
+    border: 10px solid white;
+    box-shadow: 0px 0px 2px gray;
+    background: url('../img/bakbaner.png');
+    background-position: -200px -200px;
+    margin: 20px auto;
+}
+
+#banner h1{
+    display: block;
+    width: 850px;
+    font-family: 'BebasNeue';
+    color: white;
+    font-size: 45px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    margin: 27px auto;
+    text-align: center;
+    text-shadow: 2px 2px 1px black;
 }
