--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,12 @@ body {
     margin: 22px;
     margin-top: 40px;
     cursor: pointer;
+    transition: all 300ms;
+}
+
+/*Animacion Card*/
+.card:hover {
+    background: black;
 }
 
 .card:last-child{
@@ -260,6 +266,22 @@ body {
     line-height: 110px;
     text-align: center;
     margin:  0px auto;
+    transition: all 300ms;
+}
+
+.card:hover .icon {
+    font-size: 70px;
+    color: #37bcf9;
+    animation: showIcon 300ms linear;
+}
+
+@keyframes showIcon {
+    from{
+        transform: translateY(-200%);
+    }
+    to{
+        transform: translateY(0%);
+    }
 }
 
 .card .category{
@@ -270,6 +292,23 @@ body {
     font-weight: bold;
     text-align: center;
     color: #00538c;
+    transition: all 300ms;
+}
+
+.card:hover .category{
+    color: white;
+    animation: showCategory 400ms linear;
+}
+
+@keyframes showCategory {
+    from{
+        transform: translateY(-300%);
+        color: black;
+    }
+    to{
+        transform: translateY(0%);
+        color: white;
+    }
 }
 
 .card .description {
@@ -277,6 +316,22 @@ body {
     color: #015c99;
     text-align: center;
     font-size: 15px;
+    transition: all 300ms;
+}
+
+.card:hover .description{
+    color: white;
+    animation: showDescription 400ms linear;
+}
+
+@keyframes showDescription {
+    from{
+        transform: translateX(-300%);
+        color: black;
+    }
+    to{
+        transform: translateX(0%);
+    }
 }
 
 /*BARRA LATERAL*/
