--- a/css/style.css
+++ b/css/style.css
@@ -621,6 +621,7 @@ body {
     margin-top: 60px;
     line-height: 100px;
     text-align: center;
+    transition: all 1s;
 }
 
 #blog a {
@@ -630,6 +631,44 @@ body {
     letter-spacing: 3px;
     color: #00538c;
     text-decoration: none;
+    transition: all 1s;
+}
+
+/*Animacion enlace Blog*/
+#blog:hover{
+    background-color: #333;
+    border: 10px solid #37bcf9;
+    border-radius: 240px;
+    box-shadow: 0px 0px 10px gray;
+    animation: blink 5s infinite linear;
+}
+
+#blog:hover a{
+    color: white;
+    text-shadow: 1px 1px 1px black, 
+                 1px 2px 1px black, 
+                 1px 3px 1px black,
+                 1px 4px 1px black,
+                 1px 5px 1px black,
+                 1px 6px 1px black;
+}
+
+@keyframes blink {
+    0%{
+        border: 10px solid #37bcf9;
+    }
+    25%{
+        border: 10px solid green;
+    }
+    50%{
+        border: 10px solid yellow;
+    }
+    75%{
+        border: 10px solid white;
+    }
+    100%{
+        border: 10px solid #37bcf9;
+    }
 }
 
 /*FOOTER*/
@@ -687,6 +726,15 @@ body {
     display: block;
     height: 40px;
     text-transform: lowercase;
+    transition: all 300ms;
+}
+
+/*Animacion menu*/
+#footer ul li:hover a{
+    padding-left: 40px;
+    color: white;
+    width: 100%;
+    text-transform: uppercase;
 }
 
 #footer ul li a::first-letter {  /*TRANSFORMA PRIMERA LETRA EN MAYUSCULA*/
