--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,6 +5,7 @@
     }
 
     #banner h1{
+        width: 100%;
         font-size: 35px;
         text-align: center;
         margin: 33px auto;
@@ -18,7 +19,7 @@
     .card p{
         width: 90%;
         display: block;
-        margin: 0px auto;
+        margin: 0 auto;
         text-align: center;
     }
 
@@ -31,7 +32,7 @@
     }
 
     #footer .wrap > div{
-        width: 26%;
+        width: 24%;
     }
 
     #footer #browsers img{
@@ -41,4 +42,83 @@
     #footer h5{
         font-size: 30px;
     }
+}
+
+@media (max-width: 1080px) {
+    .card .category{
+        font-size: 17px;
+    }
+
+    .card .description{
+        font-size: 14px;
+    }
+
+    #articles{
+        width: 61%;
+    }
+}
+
+@media (max-width: 970px) {
+    #articles {
+        width: 59%;
+    }
+
+    #footer .wrap > div{
+        width: 26%;
+        margin: 20px;
+    }
+
+    #footer h5{
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 925px) {
+    #articles {
+        width: 65%;
+    }
+
+    #lateral{
+        width: 25%;
+    }
+
+    #lateral input[type="text"]{
+        width: 78%;
+    }
+
+    .aside-box{
+        width: 95%;
+        min-height: 140px;
+        height: auto;
+        padding-bottom: 10px;
+    }
+
+    #login a{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    #login input[type="email"], 
+    #login input[type="password"]{
+            width: 65%;
+    }
+
+    #login #user, 
+    #login #password{
+        margin-left: 24px;
+    }
+
+    #login input[type='submit'], 
+    #login input[type='reset'], 
+    #login input[type='button'], 
+    #login button {
+        margin-bottom: 0px;
+    }
+
+    #login input[type='reset']{
+        display: none;
+    }
+
+
+
 }
