--- a/css/responsive.css
+++ b/css/responsive.css
@@ -118,7 +118,34 @@
     #login input[type='reset']{
         display: none;
     }
+}
 
+@media (max-width: 899px) {
+    #lateral h3{
+        font-size: 20px;
+    }
+}
 
+@media (max-width: 799px) {
+    #banner h1{
+        font-size: 35px;
+    }
 
+    .card {
+        height: auto;
+    }
+
+    .card .category{
+        font-size: 15px;
+        margin-top: -23px;
+    }
+
+    .card .description{
+        display: none;
+    }
+
+    #footer img{
+        margin-bottom: 15px;
+        max-width: 100%;
+    }
 }
