--- a/css/responsive.css
+++ b/css/responsive.css
@@ -149,3 +149,37 @@
         max-width: 100%;
     }
 }
+
+@media (max-width: 724px){
+    #header{
+        width: 100%;
+        height: 120px;
+        padding-top: 10px;
+    }
+
+    #logo {
+        float: none;
+        width: 200px;
+        margin: 0px auto;
+    }
+
+    #menu {
+        clear: both;
+        width: 440px;
+        float: none;
+        margin: 0px auto;
+    }
+
+    #lateral input[type="text"] {
+        width: 70%;
+    }
+}
+
+@media (max-width: 660px){
+    #articles{
+        width: 100%;
+    }
+    #lateral{
+        width: 100%;
+    }
+}
