--- a/css/responsive.css
+++ b/css/responsive.css
@@ -219,4 +219,119 @@
     #footer h5{
         font-size: 25px;
     }
+
+    .card .icon{
+        font-size: 45px;
+    }
+
+    .card:hover .icon{
+        font-size: 45px;
+    }
+}
+
+@media (max-width: 579px) {
+    #lateral input[type="text"] {
+        width: 92%;
+    }
+
+    #login #user, #login #password {
+        margin-left: 18px;
+    }
+}
+
+@media (max-width: 563px) {
+    .card {
+        width: 16%;
+        margin: 1.8%;
+    }
+}
+
+@media (max-width: 506px) {
+    #lateral input[type="text"] {
+        width: 90%;
+    }
+
+    #articles article {
+        width: 95%;
+    }
+}
+
+@media (max-width: 498px) {
+
+    .card {
+        width: 16%;
+        margin: 2.8%;
+        margin-right: auto;
+    }
+
+    .card .category{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 475px) {
+
+    #header{
+        width: 100%;
+        height: 203px;
+        padding-top: 10px;
+    }
+
+    #menu{
+        clear: both;
+        float: none;
+        width: 100%;
+        margin: 0px auto;
+    }
+
+    #menu ul li{
+        width: 100%;
+        line-height: 52px;
+    }
+
+    #menu ul li a{
+        width: 100%;
+        line-height: 30px;
+    }
+
+    #menu ul li a:hover{
+        color: #37bcf9;
+        transform: scale(1,1);
+    }
+
+    #banner {
+        height: 85px;
+    }
+
+    #banner h1{
+        font-size: 20px;
+    }
+
+    .card .icon{
+        font-size: 35px;
+    }
+
+    .card:hover .icon{
+        font-size: 35px;
+    }
+
+    .card .category{
+        font-size: 13px;
+    }
+
+
+
+}
+
+
+
+@media (max-width: 405px) {
+    #lateral input[type="text"] {
+        width: 88%;
+    }
+
+    #login input[type="email"], 
+    #login input[type="password"] {
+        width: 87%;
+    }
 }
