--- a/css/responsive.css
+++ b/css/responsive.css
@@ -256,6 +256,12 @@
     }
 }
 
+@media (max-width: 488px) {
+    #banner h1{
+        font-size: 23px;
+    }
+}
+
 @media (max-width: 498px) {
 
     .card {
@@ -304,7 +310,7 @@
     }
 
     #banner h1{
-        font-size: 20px;
+        font-size: 23px;
     }
 
     .card .icon{
@@ -319,11 +325,39 @@
         font-size: 13px;
     }
 
+    #articles .data{
+        float: none;
+        margin: -10px;
+        border-radius: 0px;
+    }
 
+    #articles article h4{
+        margin-top: 20px;
+    }
 
 }
 
+@media (max-width: 456px) {
+    #banner h1{
+        font-size: 20px;
+    }
 
+    #login input[type="email"], 
+    #login input[type="password"] {
+        width: 87%;
+    }
+}
+
+@media (max-width: 441px) {
+    .card .category {
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 408px) {
+    #banner h1{
+        font-size: 18px;
+    }
 
 @media (max-width: 405px) {
     #lateral input[type="text"] {
@@ -333,5 +367,46 @@
     #login input[type="email"], 
     #login input[type="password"] {
         width: 87%;
+    }
+}
+
+@media (max-width: 377px) {
+    #banner h1 {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 370px) {
+    .card .category {
+        font-size: 8px;
+    }
+}
+
+@media (max-width: 345px) {
+    #banner h1 {
+        font-size: 14px;
+    }
+
+    #login input[type="email"], 
+    #login input[type="password"] {
+        width: 80%;
+    }
+
+    #login #user, #login #password {
+        margin-left: 22px;
+    }
+}
+
+@media (max-width: 320px) {
+    #menu ul li:first-child {
+        padding-top: 8px;
+    }
+
+    #articles article {
+        width: 89%;
+    }
+
+    #articles .data span {
+        margin: 19px;
     }
 }
